--- a/ezlearning-frontend/public/css/home.css
+++ b/ezlearning-frontend/public/css/home.css
@@ -26,6 +26,14 @@
     vertical-align: middle;
 }
 
+.box {
+    padding: 7px 18px;
+    border-radius: 100px;
+    height: 35px;
+    background-color: rgba(219, 215, 215, 0.938);
+    vertical-align: middle;
+}
+
 .search-box-white input {
     background-color: transparent;
     font-size: 14px;
@@ -63,4 +71,15 @@
     font-size: 24px;
     font-weight: bold;
     color: #888;
+}
+
+.section-subTitle {
+    font-size: 18px;
+    font-weight: bold;
+    color: #888;
+}
+
+.section-keyword {
+    font-size: 26px;
+    color: #000;
 }
