--- a/ezlearning-frontend/public/css/styles.css
+++ b/ezlearning-frontend/public/css/styles.css
@@ -47,3 +47,42 @@ body {
     border: 0px;
     cursor: pointer;
 }
+
+.navbar{
+    background: #fff;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
+    height: 60px;
+    font-size: 14px;
+    font-weight: bold;
+    position: absolute;
+}
+
+.sign-up-btn {
+    padding: 7px 18px;
+    border-radius: 100px;
+    height: 35px;
+    background: #75D254;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
+    color: #fff;
+}
+
+.search-box {
+    padding: 7px 18px;
+    border-radius: 100px;
+    height: 35px;
+    background: rgba(238, 238, 238, 0.25);
+    vertical-align: middle;
+}
+
+.search-box input {
+    background-color: transparent;
+    font-size: 14px;
+    font-weight: bold;
+    color: #ccc;
+    width: 80%;
+    border: 0px;
+}
+
+.search-box input::placeholder {
+    color: #ccc;
+}
