--- a/ezlearning-frontend/UI/res/css/styles.css
+++ b/ezlearning-frontend/UI/res/css/styles.css
@@ -111,6 +111,26 @@ body {
     line-height: 30px;
 }
 
+.footer ul li:hover {
+    color: #75D254;
+    cursor: pointer;
+}
+
+.dropdown ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+.dropdown ul li {
+    display: block;
+    line-height: 30px;
+}
+
+.dropdown ul li:hover {
+    color: #75D254;
+    cursor: pointer;
+}
+
 .split {
     -moz-column-count: 2;
     -moz-column-gap: 10px;
@@ -118,4 +138,49 @@ body {
     -webkit-column-gap: 10px;
     column-count: 2;
     column-gap: 10px;
+}
+
+.menu-dropdown{
+    margin-top: 10px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
+    background: #fff;
+    border-radius: 10px;
+    position: absolute;
+    color: #888888;
+}
+
+.menu-dropdown::before{
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    top: -5px;
+    right: calc(50% - 7px);
+    background: #fff;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    border-radius: 4px;
+    content: '';
+    display: block;
+}
+
+.dropdown-addon{
+    background: #F8F9FB;
+    padding: 15px 30px;
+    border-radius: 0px 0px 10px 10px;
+}
+
+.dropdown-addon:hover{
+    color: #75D254;
+    cursor: pointer;
+}
+
+.dropdown-content{
+    padding: 20px 30px 0px 30px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 34px;
+}
+
+.flip{
+    transform: rotate(180deg);
 }
