--- a/ezlearning-frontend/UI/res/css/home.css
+++ b/ezlearning-frontend/UI/res/css/home.css
@@ -18,6 +18,17 @@
     background-color: rgba(0, 0, 0, 0.25);
 }
 
+.cart-white {
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border-radius: 100px;
+    height: 35px;
+    width: 35px !important;
+    display: inline-block;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
 .search-box-white {
     padding: 7px 18px;
     border-radius: 100px;
