--- a/ezlearning-frontend/UI/res/css/styles.css
+++ b/ezlearning-frontend/UI/res/css/styles.css
@@ -66,6 +66,18 @@ body {
     color: #fff;
 }
 
+.cart {
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border-radius: 100px;
+    height: 35px;
+    width: 35px !important;
+    background: #FDBB35;
+    color: #fff;
+    display: inline-block;
+    text-align: center;
+}
+
 .search-box {
     padding: 7px 18px;
     border-radius: 100px;
@@ -163,6 +175,19 @@ body {
     display: block;
 }
 
+.dropdown-addon-top{
+    background: #fff;
+    padding: 15px 30px;
+    border-radius: 10px 10px 0px 0px;
+    border: 0px;
+    border-bottom: 1px solid #eee;
+}
+
+.dropdown-addon-top:hover{
+    color: #75D254;
+    cursor: pointer;
+}
+
 .dropdown-addon{
     background: #F8F9FB;
     padding: 15px 30px;
@@ -183,4 +208,18 @@ body {
 
 .flip{
     transform: rotate(180deg);
+}
+
+.navbar-ava-container{
+    border-radius: 100px;
+    height: 35px;
+    width: 35px !important;
+    display: inline-block;
+    box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.15);
+}
+
+.navbar-ava-img{
+    height: 100%;
+    width: auto;
+    border-radius: 100%;
 }
