--- a/ezlearning-frontend/UI/res/css/home.css
+++ b/ezlearning-frontend/UI/res/css/home.css
@@ -16,6 +16,7 @@
     border-radius: 100px;
     height: 35px;
     background-color: rgba(0, 0, 0, 0.25);
+    box-shadow: none;
 }
 
 .cart-white {
