--- a/ezlearning-frontend/public/css/home.css
+++ b/ezlearning-frontend/public/css/home.css
@@ -11,11 +11,12 @@
     color: #fff;
 }
 
-.sign-up-btn-white {
+.white {
     padding: 7px 18px;
     border-radius: 100px;
     height: 35px;
     background-color: rgba(0, 0, 0, 0.25);
+    box-shadow: none;
 }
 
 .cart-white {
