--- a/ezlearning-frontend/UI/res/css/styles.css
+++ b/ezlearning-frontend/UI/res/css/styles.css
@@ -354,3 +354,14 @@ body {
     font-size: 12px;
     font-weight: normal;
 }
+
+.box-content {
+    background: #FFFFFF;
+    box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    padding: 40px;
+    color: #000;
+    font-weight: normal;
+    font-size: 17px;
+    margin-top: 30px;
+}
