--- a/ezlearning-frontend/UI/res/css/lecture-detail.css
+++ b/ezlearning-frontend/UI/res/css/lecture-detail.css
@@ -139,7 +139,8 @@
     box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 100px;
     width: 32px;
-    height: 32px
+    height: 32px;
+    margin-left: 3px;
 }
 
 .rater-cmt {
@@ -165,11 +166,24 @@
 
 .scroll-cmt{
     height: calc(100% - 60px);
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
-    margin-right: -25px;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-right: -50px;
+    padding-left: 15px;
+    padding-right: 35px;
     margin-top: -2px;
     margin-left: -10px;
+    margin-bottom: -1200px;
+}
+
+.scroll-curr{
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin-right: -50px;
+    padding-left: 10px;
+    padding-right: 20px;
+    margin-top: -2px;
+    margin-left: -10px;
+    margin-bottom: -1200px;
 }
