--- a/ezlearning-frontend/public/css/styles.css
+++ b/ezlearning-frontend/public/css/styles.css
@@ -66,6 +66,18 @@ body {
     color: #fff;
 }
 
+.small-btn {
+    padding: 3px 18px;
+    border-radius: 100px;
+    border: 0px;
+    height: 32px;
+    background: #75D254;
+    box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.1);
+    color: #fff;
+    font-weight: bold;
+    font-size: 14px;
+}
+
 .cart {
     padding-top: 7px;
     padding-bottom: 7px;
@@ -281,6 +293,15 @@ body {
     font-size: 16px;
 }
 
+.input-small {
+    height: 32px;
+    border-radius: 100px;
+    border: 0px;
+    background: rgba(0, 0, 0, 0.05);
+    padding: 10px;
+    font-size: 16px;
+}
+
 .label-normal {
     font-size: 14px;
     font-weight: normal;
@@ -304,30 +325,48 @@ body {
     height: 42px;
     text-align: center;
     color: #fff;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
-.sign-up-policy{
+.sign-up-policy {
     font-weight: normal;
     color: #888;
     margin: 10px 20px;
 }
 
-.sign-up-policy>a{
+.sign-up-policy>a {
     color: #0075ff;
     text-decoration: none;
 }
 
-.fb-sign-up{
+.fb-sign-up {
     background: #3B5998;
     font-weight: bold;
     text-transform: none;
 }
 
-.form-warning{
+.form-warning {
     text-align: center !important;
     margin-top: 10px !important;
     margin-bottom: -10px !important;
     color: red;
     font-size: 12px;
     font-weight: normal;
+}
+
+.box-content {
+    background: #FFFFFF;
+    box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    padding: 40px;
+    color: #000;
+    font-weight: normal;
+    font-size: 17px;
+    margin-top: 30px;
+}
+
+.no-padding{
+    padding-left: 0px;
+    padding-right: 0px;
 }
