--- a/ezlearning-frontend/UI/res/css/styles.css
+++ b/ezlearning-frontend/UI/res/css/styles.css
@@ -1,10 +1,7 @@
 @font-face {
     font-family: 'SVN-Product Sans';
     src: url('../fonts/SVN-ProductSans.eot');
-    src: url('../fonts/SVN-ProductSans.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/SVN-ProductSans.woff2') format('woff2'),
-        url('../fonts/SVN-ProductSans.woff') format('woff'),
-        url('../fonts/SVN-ProductSans.svg#SVN-ProductSans') format('svg');
+    src: url('../fonts/SVN-ProductSans.eot?#iefix') format('embedded-opentype'), url('../fonts/SVN-ProductSans.woff2') format('woff2'), url('../fonts/SVN-ProductSans.woff') format('woff'), url('../fonts/SVN-ProductSans.svg#SVN-ProductSans') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -12,10 +9,7 @@
 @font-face {
     font-family: 'SVN-Product Sans';
     src: url('../fonts/SVN-ProductSansBold.eot');
-    src: url('../fonts/SVN-ProductSansBold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/SVN-ProductSansBold.woff2') format('woff2'),
-        url('../fonts/SVN-ProductSansBold.woff') format('woff'),
-        url('../fonts/SVN-ProductSansBold.svg#SVN-ProductSansBold') format('svg');
+    src: url('../fonts/SVN-ProductSansBold.eot?#iefix') format('embedded-opentype'), url('../fonts/SVN-ProductSansBold.woff2') format('woff2'), url('../fonts/SVN-ProductSansBold.woff') format('woff'), url('../fonts/SVN-ProductSansBold.svg#SVN-ProductSansBold') format('svg');
     font-weight: bold;
     font-style: normal;
 }
@@ -366,7 +360,46 @@ body {
     margin-top: 30px;
 }
 
-.no-padding{
+.no-padding {
     padding-left: 0px !important;
     padding-right: 0px !important;
+}
+
+.page-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.select-custom {
+    height: 38px;
+    border-radius: 5px;
+    border: 1px solid #CCCCCC;
+    width: 100%;
+    padding-top: 7px !important;
+    padding: 10px;
+    font-size: 16px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url(../icons/select-arrow.png) 96% / 3% no-repeat;
+}
+
+.select-custom select::-ms-expand {
+    display: none;
+}
+
+.select-custom::after {
+    
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 14px;
+    padding: 7px 20px;
+    border-radius: 0 5px 5px 0;
+    background-color: #0095DA;
+    content: "";
+    display: inline;
+    margin-right: -10px;
+    margin-left: 15px;
 }
