Xong sơ sơ (chưa xử lý jquery) Lecture create
Xong cart

--- a/ezlearning-frontend/UI/res/css/course-detail.css
+++ b/ezlearning-frontend/UI/res/css/course-detail.css
@@ -278,7 +278,7 @@
 }
 
 .add-to-cart {
-    background: #FF2E2E;
+    background: #FDBB35;
     border-radius: 0px 0px 15px 15px;
     height: 42px;
     margin-top: 0px !important;
