--- a/ezlearning-frontend/public/css/cart.css
+++ b/ezlearning-frontend/public/css/cart.css
@@ -94,3 +94,9 @@
 .cart-item-price::after{
     content: ' đ';
 }
+
+.voucher-tit {
+    font-weight: bold;
+    padding-top: 5px;
+    padding-left: 20px !important;
+}
