--- a/ezlearning-frontend/public/css/styles.css
+++ b/ezlearning-frontend/public/css/styles.css
@@ -1,10 +1,7 @@
 @font-face {
     font-family: 'SVN-Product Sans';
     src: url('../fonts/SVN-ProductSans.eot');
-    src: url('../fonts/SVN-ProductSans.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/SVN-ProductSans.woff2') format('woff2'),
-        url('../fonts/SVN-ProductSans.woff') format('woff'),
-        url('../fonts/SVN-ProductSans.svg#SVN-ProductSans') format('svg');
+    src: url('../fonts/SVN-ProductSans.eot?#iefix') format('embedded-opentype'), url('../fonts/SVN-ProductSans.woff2') format('woff2'), url('../fonts/SVN-ProductSans.woff') format('woff'), url('../fonts/SVN-ProductSans.svg#SVN-ProductSans') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -12,10 +9,7 @@
 @font-face {
     font-family: 'SVN-Product Sans';
     src: url('../fonts/SVN-ProductSansBold.eot');
-    src: url('../fonts/SVN-ProductSansBold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/SVN-ProductSansBold.woff2') format('woff2'),
-        url('../fonts/SVN-ProductSansBold.woff') format('woff'),
-        url('../fonts/SVN-ProductSansBold.svg#SVN-ProductSansBold') format('svg');
+    src: url('../fonts/SVN-ProductSansBold.eot?#iefix') format('embedded-opentype'), url('../fonts/SVN-ProductSansBold.woff2') format('woff2'), url('../fonts/SVN-ProductSansBold.woff') format('woff'), url('../fonts/SVN-ProductSansBold.svg#SVN-ProductSansBold') format('svg');
     font-weight: bold;
     font-style: normal;
 }
@@ -34,6 +28,7 @@ body {
     font-size: 14px;
     background: #fff;
     border: 0px;
+    cursor: pointer;
 }
 
 .price-button {
@@ -64,6 +59,7 @@ body {
     background: #75D254;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
     color: #fff;
+    cursor: pointer;
 }
 
 .small-btn {
@@ -76,6 +72,11 @@ body {
     color: #fff;
     font-weight: bold;
     font-size: 14px;
+    cursor: pointer;
+}
+
+button {
+    cursor: pointer;
 }
 
 .cart {
@@ -240,6 +241,34 @@ body {
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);
 }
 
+.modal-padding {
+    padding: 25px 30px;
+}
+
+.tmodal-title {
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.tmodal-msg {
+    font-size: 14px;
+    font-weight: normal;
+    color: #666;
+}
+
+.tmodal-addon {
+    font-size: 14px;
+    font-weight: bold;
+    color: #888;
+}
+
+.tmodal-addon:hover {
+    font-size: 14px;
+    font-weight: bold;
+    color: #75D354;
+}
+
 .modal-top {
     background: #F8F9FB;
     border-radius: 15px 15px 0px 0px;
@@ -327,6 +356,7 @@ body {
     color: #fff;
     padding-left: 15px;
     padding-right: 15px;
+    cursor: pointer;
 }
 
 .sign-up-policy {
@@ -366,7 +396,45 @@ body {
     margin-top: 30px;
 }
 
-.no-padding{
+.no-padding {
     padding-left: 0px !important;
     padding-right: 0px !important;
+}
+
+.page-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.select-custom {
+    height: 38px;
+    border-radius: 5px;
+    border: 1px solid #CCCCCC;
+    width: 100%;
+    padding-top: 7px !important;
+    padding: 10px;
+    font-size: 16px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url(../icons/select-arrow.png) 96% / 3% no-repeat;
+}
+
+.select-custom select::-ms-expand {
+    display: none;
+}
+
+.select-custom::after {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 14px;
+    padding: 7px 20px;
+    border-radius: 0 5px 5px 0;
+    background-color: #0095DA;
+    content: "";
+    display: inline;
+    margin-right: -10px;
+    margin-left: 15px;
 }
